--- a/src/main/resources/com/hmc/createhmcuser/input_view.fxml
+++ b/src/main/resources/com/hmc/createhmcuser/input_view.fxml
@@ -10,7 +10,7 @@
 
 <VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
   <children>
-    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
+    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="0.0" prefWidth="640.0" VBox.vgrow="ALWAYS">
       <children>
             <Text layoutX="14.0" layoutY="33.0" strokeType="OUTSIDE" strokeWidth="0.0" text="First Name:" />
             <TextField layoutX="81.0" layoutY="16.0" />
@@ -21,8 +21,10 @@
                   <Image url="@../../../hmc_logo.png" />
                </image>
             </ImageView>
-            <Text layoutX="14.0" layoutY="112.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Office:" />
-            <ComboBox layoutX="81.0" layoutY="96.0" prefWidth="150.0" />
+            <Text layoutX="14.0" layoutY="152.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Office:" />
+            <ComboBox layoutX="81.0" layoutY="136.0" prefWidth="150.0" />
+            <Text layoutX="14.0" layoutY="113.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password:" />
+            <TextField layoutX="81.0" layoutY="96.0" />
       </children>
     </AnchorPane>
   </children>
