--- a/src/main/resources/com/hmc/createhmcuser/input_view.fxml
+++ b/src/main/resources/com/hmc/createhmcuser/input_view.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -8,23 +9,28 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<VBox prefHeight="440.0" prefWidth="280.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
   <children>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="0.0" prefWidth="640.0" VBox.vgrow="ALWAYS">
       <children>
-            <Text layoutX="14.0" layoutY="31.0" strokeType="OUTSIDE" strokeWidth="0.0" text="First Name:" />
-            <TextField layoutX="81.0" layoutY="16.0" />
-            <Text layoutX="14.0" layoutY="72.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Last Name:" />
-            <TextField layoutX="81.0" layoutY="56.0" />
-            <ImageView fitHeight="94.0" fitWidth="200.0" layoutX="427.0" layoutY="13.0">
+            <ImageView fitHeight="94.0" fitWidth="200.0" layoutX="40.0" layoutY="19.0">
                <image>
                   <Image url="@../../../hmc_logo.png" />
                </image>
             </ImageView>
-            <Text layoutX="14.0" layoutY="153.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Office:" />
-            <ComboBox layoutX="81.0" layoutY="137.0" prefWidth="150.0" />
-            <Text layoutX="14.0" layoutY="112.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password:" />
-            <TextField layoutX="81.0" layoutY="96.0" />
+            <Text layoutX="32.0" layoutY="154.0" strokeType="OUTSIDE" strokeWidth="0.0" text="First Name:" />
+            <TextField layoutX="99.0" layoutY="138.0" />
+            <Text layoutX="32.0" layoutY="194.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Last Name:" />
+            <TextField layoutX="99.0" layoutY="178.0" />
+            <Text layoutX="32.0" layoutY="234.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password:" />
+            <TextField layoutX="99.0" layoutY="218.0" />
+            <Text layoutX="32.0" layoutY="274.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Title:" />
+            <TextField layoutX="99.0" layoutY="258.0" prefWidth="150.0" />
+            <Text layoutX="32.0" layoutY="314.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Office:" />
+            <ComboBox layoutX="99.0" layoutY="298.0" prefWidth="150.0" />
+            <Text layoutX="32.0" layoutY="354.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Number:" />
+            <ComboBox layoutX="99.0" layoutY="338.0" prefWidth="150.0" />
+            <Button layoutX="99.0" layoutY="378.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="150.0" text="Create User" />
       </children>
     </AnchorPane>
   </children>
