--- a/src/main/resources/com/hmc/createhmcuser/input_view.fxml
+++ b/src/main/resources/com/hmc/createhmcuser/input_view.fxml
@@ -28,7 +28,7 @@
             <Text layoutX="32.0" layoutY="314.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Office:" />
             <ComboBox fx:id="officeComboBox" layoutX="99.0" layoutY="298.0" prefWidth="150.0" />
             <Text layoutX="32.0" layoutY="354.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Number:" />
-            <ComboBox layoutX="99.0" layoutY="338.0" prefWidth="150.0" />
+            <ComboBox fx:id="numberComboBox" layoutX="99.0" layoutY="338.0" prefWidth="150.0" />
             <Button layoutX="99.0" layoutY="378.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="150.0" text="Create User" />
       </children>
     </AnchorPane>
