--- a/src/main/resources/com/hmc/createhmcuser/homepage_view.fxml
+++ b/src/main/resources/com/hmc/createhmcuser/homepage_view.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.hmc.createhmcuser.Controller">
+<VBox xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.hmc.createhmcuser.Homepage_Controller">
   <children>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="292.0" prefWidth="286.0" VBox.vgrow="ALWAYS">
       <children>
