--- a/src/main/resources/com/hmc/createhmcuser/create_user_view.fxml
+++ b/src/main/resources/com/hmc/createhmcuser/create_user_view.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.TextField?>
@@ -7,30 +8,61 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox prefHeight="440.0" prefWidth="280.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.hmc.createhmcuser.Create_User_Controller">
+<VBox prefHeight="739.0" prefWidth="537.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.hmc.createhmcuser.Create_Controller">
   <children>
-    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="0.0" prefWidth="640.0" VBox.vgrow="ALWAYS">
+    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="513.0" prefWidth="407.0" VBox.vgrow="ALWAYS">
       <children>
-            <ImageView fitHeight="94.0" fitWidth="200.0" layoutX="40.0" layoutY="19.0">
+            <ImageView fitHeight="59.0" fitWidth="58.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../back_button.png" />
+               </image>
+            </ImageView>
+          <Button fx:id="backButton" layoutX="19.0" layoutY="18.0" mnemonicParsing="false" opacity="0.0" prefHeight="51.0" prefWidth="49.0">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor></Button>
+          <ImageView fitHeight="130.0" fitWidth="288.0" layoutX="125.0" layoutY="85.0">
                <image>
                   <Image url="@../../../hmc_logo.png" />
                </image>
             </ImageView>
-            <Text layoutX="32.0" layoutY="154.0" strokeType="OUTSIDE" strokeWidth="0.0" text="First Name:" />
-            <TextField fx:id="firstNameField" layoutX="99.0" layoutY="138.0" />
-            <Text layoutX="32.0" layoutY="194.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Last Name:" />
-            <TextField fx:id="lastNameField" layoutX="99.0" layoutY="178.0" />
-            <Text layoutX="32.0" layoutY="234.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password:" />
-            <TextField fx:id="passwordField" layoutX="99.0" layoutY="218.0" />
-            <Text layoutX="32.0" layoutY="274.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Title:" />
-            <TextField fx:id="titleField" layoutX="99.0" layoutY="258.0" prefWidth="150.0" />
-            <Text layoutX="32.0" layoutY="314.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Office:" />
-            <ComboBox fx:id="officeComboBox" layoutX="99.0" layoutY="298.0" prefWidth="150.0" />
-            <Text layoutX="32.0" layoutY="354.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Number:" />
-            <ComboBox fx:id="numberComboBox" layoutX="99.0" layoutY="338.0" maxHeight="1.7976931348623157E308" prefWidth="150.0" />
-            <Button fx:id="submitButton" layoutX="99.0" layoutY="378.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="150.0" text="Create User" />
+            <Text layoutX="98.0" layoutY="289.0" strokeType="OUTSIDE" strokeWidth="0.0" text="First Name:" wrappingWidth="126.677734375">
+               <font>
+                  <Font size="20.0" />
+               </font></Text>
+            <TextField fx:id="firstNameField" layoutX="208.0" layoutY="263.0" prefHeight="38.0" prefWidth="235.0" />
+            <Text layoutX="98.0" layoutY="340.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Last Name:">
+               <font>
+                  <Font size="20.0" />
+               </font></Text>
+            <TextField fx:id="lastNameField" layoutX="208.0" layoutY="313.0" prefHeight="38.0" prefWidth="235.0" />
+            <Text layoutX="98.0" layoutY="390.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password:">
+               <font>
+                  <Font size="20.0" />
+               </font></Text>
+            <TextField fx:id="passwordField" layoutX="208.0" layoutY="363.0" prefHeight="38.0" prefWidth="235.0" />
+            <Text layoutX="98.0" layoutY="440.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Title:">
+               <font>
+                  <Font size="20.0" />
+               </font></Text>
+            <TextField fx:id="titleField" layoutX="208.0" layoutY="413.0" prefHeight="38.0" prefWidth="235.0" />
+            <Text layoutX="98.0" layoutY="490.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Office:">
+               <font>
+                  <Font size="20.0" />
+               </font></Text>
+            <ComboBox fx:id="officeComboBox" layoutX="208.0" layoutY="463.0" prefHeight="38.0" prefWidth="235.0" />
+            <Text layoutX="98.0" layoutY="540.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Number:">
+               <font>
+                  <Font size="20.0" />
+               </font></Text>
+            <ComboBox fx:id="numberComboBox" layoutX="208.0" layoutY="513.0" prefHeight="38.0" prefWidth="235.0" />
+            <Button fx:id="submitButton" layoutX="95.0" layoutY="578.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="349.0" text="Create User">
+               <font>
+                  <Font size="20.0" />
+               </font></Button>
       </children>
     </AnchorPane>
   </children>
