--- a/src/main/resources/com/hmc/createhmcuser/homepage_view.fxml
+++ b/src/main/resources/com/hmc/createhmcuser/homepage_view.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -32,6 +33,12 @@
                </font>
             </Text>
       </children>
+         <cursor>
+            <Cursor fx:constant="DEFAULT" />
+         </cursor>
     </AnchorPane>
   </children>
+   <cursor>
+      <Cursor fx:constant="DEFAULT" />
+   </cursor>
 </VBox>
