add script function to create json of all users

--- a/src/main/resources/com/hmc/createhmcuser/delete_user_view.fxml
+++ b/src/main/resources/com/hmc/createhmcuser/delete_user_view.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -22,10 +23,11 @@
                   <Image url="@../../../hmc_logo.png" />
               </image>
           </ImageView>
-            <Button fx:id="deleteButton" layoutX="70.0" layoutY="554.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="329.0" text="Delete User">
+            <Button fx:id="deleteButton" layoutX="70.0" layoutY="554.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="329.0" text="Delete User">
                <font>
-                  <Font size="20.0" />
+                  <Font size="16.0" />
                </font></Button>
+            <ListView fx:id="usersListView" layoutX="91.0" layoutY="262.0" prefHeight="252.0" prefWidth="288.0" />
       </children>
     </AnchorPane>
   </children>
