--- a/src/main/resources/com/hmc/createhmcuser/homepage_view.fxml
+++ b/src/main/resources/com/hmc/createhmcuser/homepage_view.fxml
@@ -18,7 +18,7 @@
                   <Image url="@../../../hmc_logo.png" />
               </image>
           </ImageView>
-            <Button fx:id="createButton" layoutX="76.0" layoutY="371.0" mnemonicParsing="false" prefHeight="21.0" prefWidth="319.0" text="Create User">
+            <Button fx:id="createButton" focusTraversable="false" layoutX="76.0" layoutY="371.0" mnemonicParsing="false" prefHeight="21.0" prefWidth="319.0" text="Create User">
                <font>
                   <Font size="16.0" />
                </font>
