--- a/src/main/resources/com/hmc/createhmcuser/delete_user_view.fxml
+++ b/src/main/resources/com/hmc/createhmcuser/delete_user_view.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -23,6 +24,16 @@
                   <Image url="@../../../hmc_logo.png" />
               </image>
           </ImageView>
+            <ImageView fitHeight="30.0" fitWidth="43.0" layoutX="91.0" layoutY="219.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../search_bar.png" />
+               </image>
+            </ImageView>
+            <TextField fx:id="searchField" layoutX="138.0" layoutY="219.0" prefHeight="25.0" prefWidth="241.0">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </TextField>
             <Button fx:id="deleteButton" layoutX="70.0" layoutY="554.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="329.0" text="Delete User">
                <font>
                   <Font size="16.0" />
