--- a/src/main/resources/com/hmc/boardingtool/homepage_view.fxml
+++ b/src/main/resources/com/hmc/boardingtool/homepage_view.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox prefHeight="656.0" prefWidth="470.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.hmc.createhmcuser.Home_Controller">
+<VBox prefHeight="656.0" prefWidth="470.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.hmc.boardingtool.Home_Controller">
   <children>
       <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="656.0" prefWidth="470.0" VBox.vgrow="ALWAYS">
       <children>
@@ -18,18 +18,18 @@
                   <Image url="@../../../hmc_logo.png" />
               </image>
           </ImageView>
-            <Button fx:id="createButton" focusTraversable="false" layoutX="76.0" layoutY="371.0" mnemonicParsing="false" prefHeight="21.0" prefWidth="319.0" text="Create User">
+            <Button fx:id="onboardButton" focusTraversable="false" layoutX="76.0" layoutY="371.0" mnemonicParsing="false" prefHeight="21.0" prefWidth="319.0" text="Onboard User">
                <font>
                   <Font size="16.0" />
                </font>
             </Button>
-            <Button fx:id="deleteButton" layoutX="75.0" layoutY="437.0" mnemonicParsing="false" prefHeight="21.0" prefWidth="319.0" text="Delete User">
+            <Button fx:id="offboardButton" layoutX="75.0" layoutY="437.0" mnemonicParsing="false" prefHeight="21.0" prefWidth="319.0" text="Offboard User">
                <font>
                   <Font size="16.0" />
                </font></Button>
-            <Text layoutX="88.0" layoutY="270.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Onboarding Tool" wrappingWidth="295.0">
+            <Text layoutX="87.0" layoutY="288.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Boarding Tool" textAlignment="CENTER" wrappingWidth="295.0">
                <font>
-                  <Font name="Microsoft YaHei Light" size="37.0" />
+                  <Font name="Microsoft YaHei Light" size="45.0" />
                </font>
             </Text>
       </children>
