--- a/src/main/resources/com/hmc/boardingtool/onboard_user_view.fxml
+++ b/src/main/resources/com/hmc/boardingtool/onboard_user_view.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox prefHeight="656.0" prefWidth="470.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.hmc.createhmcuser.Create_Controller">
+<VBox prefHeight="656.0" prefWidth="470.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.hmc.boardingtool.Onboard_Controller">
   <children>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="656.0" prefWidth="470.0" VBox.vgrow="ALWAYS">
       <children>
@@ -67,7 +67,7 @@
                   <Font size="16.0" />
                </font></Text>
             <ComboBox fx:id="numberComboBox" layoutX="183.0" layoutY="490.0" prefHeight="32.0" prefWidth="216.0" />
-            <Button fx:id="submitButton" layoutX="70.0" layoutY="554.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="329.0" text="Create User">
+            <Button fx:id="submitButton" layoutX="70.0" layoutY="554.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="329.0" text="Onboard User">
                <font>
                   <Font size="16.0" />
                </font></Button>
