--- a/src/main/resources/com/hmc/boardingtool/homepage_view.fxml
+++ b/src/main/resources/com/hmc/boardingtool/homepage_view.fxml
@@ -23,7 +23,7 @@
                   <Font size="16.0" />
                </font>
             </Button>
-            <Button fx:id="offboardButton" layoutX="75.0" layoutY="437.0" mnemonicParsing="false" prefHeight="21.0" prefWidth="319.0" text="Offboard User">
+            <Button fx:id="offboardButton" focusTraversable="false" layoutX="75.0" layoutY="437.0" mnemonicParsing="false" prefHeight="21.0" prefWidth="319.0" text="Offboard User">
                <font>
                   <Font size="16.0" />
                </font></Button>
